feat: 修改打包问题

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,10 @@
             <version>2.2.6.RELEASE</version>
         </dependency>
     </dependencies>
-
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <build>
         <plugins>
             <plugin>
