--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
     <build>
         <plugins>
             <plugin>
+                <!--       指定版本号,否则会无法指定配置文件启动         -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.2.6.RELEASE</version>
